manifests/cloudnative-pg/prod.generated.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
  name: cnpg-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
  name: webhook
  namespace: cnpg-system
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/name: cloudnative-pg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/name: cloudnative-pg
  name: manager
  namespace: cnpg-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: cloudnative-pg
        app.kubernetes.io/name: cloudnative-pg
    spec:
      containers:
      - args:
        - controller
        - --leader-elect
        - --max-concurrent-reconciles=10
        - --webhook-port=9443
        - --metrics-bind-address=:8080
        command:
        - /manager
        image: ghcr.io/cloudnative-pg/cloudnative-pg:1.27.1
        imagePullPolicy: IfNotPresent
        name: manager
        ports:
        - containerPort: 9443
          name: webhook
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: webhook
            scheme: HTTPS
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: webhook
            scheme: HTTPS
          periodSeconds: 5
        volumeMounts:
        - mountPath: /controller
          name: data
        - mountPath: /run/secrets/cnpg.io/webhook
          name: webhook-tls
          readOnly: true
      securityContext:
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: manager
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: data
      - name: webhook-tls
        secret:
          items:
          - key: tls.crt
            path: apiserver.crt
          - key: tls.key
            path: apiserver.key
          - key: ca.crt
            path: ca.crt
          secretName: webhook-tls
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
  name: cloudnative-pg-instance
  namespace: cnpg-system
spec:
  endpointSelector:
    matchExpressions:
    - key: cnpg.io/cluster
      operator: Exists
    - key: cnpg.io/podRole
      operator: In
      values:
      - instance
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: cloudnative-pg
        k8s:io.kubernetes.pod.namespace: cnpg-system
    - matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
    toPorts:
    - ports:
      - port: status
        protocol: TCP
  - fromEndpoints:
    - matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
    toPorts:
    - ports:
      - port: postgresql
        protocol: TCP
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: metrics
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /metrics
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
  name: manager
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
  - fromEntities:
    - cluster
    - host
    - remote-node
    toPorts:
    - ports:
      - port: webhook
        protocol: TCP
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: metrics
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /metrics
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cnpg-system/webhook-ca
  labels:
    app.kubernetes.io/instance: cloudnative-pg
  name: cloudnative-pg-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-backup
  failurePolicy: Fail
  name: mbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-cluster
  failurePolicy: Fail
  name: mcluster.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-database
  failurePolicy: Fail
  name: mdatabase.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - databases
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /mutate-postgresql-cnpg-io-v1-scheduledbackup
  failurePolicy: Fail
  name: mscheduledbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduledbackups
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cnpg-system/webhook-ca
  labels:
    app.kubernetes.io/instance: cloudnative-pg
  name: cloudnative-pg-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-backup
  failurePolicy: Fail
  name: vbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-cluster
  failurePolicy: Fail
  name: vcluster.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-database
  failurePolicy: Fail
  name: vdatabase.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - databases
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-pooler
  failurePolicy: Fail
  name: vpooler.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - poolers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook
      namespace: cnpg-system
      path: /validate-postgresql-cnpg-io-v1-scheduledbackup
  failurePolicy: Fail
  name: vscheduledbackup.cnpg.io
  rules:
  - apiGroups:
    - postgresql.cnpg.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduledbackups
  sideEffects: None
